<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <include
      layout="@layout/toolbar"
      android:id="@+id/toolbar"
      />

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/toolbar"
      android:overScrollMode="never"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background_color"
        android:orientation="vertical"
        >

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="@dimen/single_day_layout_desc_height"
          app:cardBackgroundColor="@color/colorPrimary"
          app:cardCornerRadius="@dimen/single_day_layout_corner_radius"
          app:cardElevation="@dimen/single_day_layout_elevation"
          app:cardUseCompatPadding="true"
          app:contentPadding="@dimen/single_day_layout_content_padding"
          >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

          <TextView
              android:id="@+id/txt_city_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@android:color/white"
              android:textSize="@dimen/single_day_layout_city_name_text_size"
              />

          <TextView
              android:id="@+id/txt_weather_info"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/txt_city_name"
              android:textColor="@android:color/white"
              android:textSize="@dimen/single_day_layout_weather_info_text_size"
              />

          <TextView
              android:id="@+id/txt_temp_value"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_alignParentEnd="true"
              android:layout_alignParentRight="true"
              android:textColor="@android:color/white"
              android:textSize="@dimen/single_day_layout_temp_value_text_size"
              />

          <ImageView
              android:id="@+id/image_weather"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:src="@drawable/ic_clouds"
              />

        </RelativeLayout>

      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardBackgroundColor="@color/main_card_color"
          app:cardCornerRadius="@dimen/single_day_layout_corner_radius"
          app:cardElevation="@dimen/single_day_layout_elevation"
          app:cardUseCompatPadding="true"
          app:contentPaddingLeft="@dimen/single_day_layout_content_padding"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

          <mk.petrovski.weathergurumvp.ui.custom.PropertyItemView
              android:id="@+id/view_feels_like"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:hintDescription="@string/hint_feels_like"
              app:iconDescription="@drawable/ic_feels_like"
              />

          <mk.petrovski.weathergurumvp.ui.custom.PropertyItemView
              android:id="@+id/view_chance_rain"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:hintDescription="@string/hint_chance_of_rain"
              app:iconDescription="@drawable/ic_chance_rain"
              />

          <mk.petrovski.weathergurumvp.ui.custom.PropertyItemView
              android:id="@+id/view_wind"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:hintDescription="@string/hint_wind"
              app:iconDescription="@drawable/ic_wind"
              />

          <mk.petrovski.weathergurumvp.ui.custom.PropertyItemView
              android:id="@+id/view_humidity"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:hintDescription="@string/hint_humidity"
              app:iconDescription="@drawable/ic_humidity"
              />

          <mk.petrovski.weathergurumvp.ui.custom.PropertyItemView
              android:id="@+id/view_visibility"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:bottomLineVisibility="false"
              app:hintDescription="@string/hint_visibility"
              app:iconDescription="@drawable/ic_visibility"
              />

        </LinearLayout>

      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="@dimen/single_day_layout_desc_height"
          app:cardBackgroundColor="@color/main_card_color"
          app:cardCornerRadius="@dimen/single_day_layout_corner_radius"
          app:cardElevation="@dimen/single_day_layout_elevation"
          app:cardUseCompatPadding="true"
          app:contentPadding="@dimen/single_day_layout_content_padding"
          >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              >

            <TextView
                android:id="@+id/txt_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sunrise"
                android:textColor="@color/property_item_hint_color"
                />

            <TextView
                android:id="@+id/txt_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/property_item_text_color"
                />

          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
              android:layout_alignParentRight="true"
              android:gravity="right"
              android:orientation="vertical"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sunset"
                android:textColor="@color/property_item_hint_color"
                />

            <TextView
                android:id="@+id/txt_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/property_item_text_color"
                />

          </LinearLayout>

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:src="@drawable/ic_sunrise_image"
              />

        </RelativeLayout>
      </android.support.v7.widget.CardView>

      <TextView
          android:id="@+id/txt_powered_by"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:padding="@dimen/single_day_layout_powered_by_padding"
          android:text="@string/txt_powered_by"
          android:textColor="@android:color/black"
          />

    </LinearLayout>

  </ScrollView>


</RelativeLayout>