<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <include
      layout="@layout/toolbar_manage_city"
      android:id="@+id/toolbar"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/toolbar"
      android:background="@android:color/white"
      android:orientation="vertical"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/manage_cities_main_search_layout_height"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/manage_cities_main_search_layout_elevation"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginEnd="@dimen/manage_cities_main_search_layout_margin_right"
          android:layout_marginLeft="@dimen/manage_cities_main_search_layout_margin_left"
          android:layout_marginRight="@dimen/manage_cities_main_search_layout_margin_right"
          android:layout_marginStart="@dimen/manage_cities_main_search_layout_margin_left"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_search_city"
            android:textColor="@android:color/white"
            />

        <AutoCompleteTextView
            android:id="@+id/autocomplete_txt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_city_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_text_color"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            />

      </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

      <android.support.v7.widget.RecyclerView
          android:id="@+id/recycler_cities"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:overScrollMode="never"
          />

      <TextView
          android:id="@+id/txt_empty_locations"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:drawablePadding="15dp"
          android:drawableTop="@drawable/ic_no_locations"
          android:gravity="center"
          android:text="@string/empty_locations"
          android:textAppearance="?android:textAppearanceLarge"
          android:textColor="@color/text_color"
          android:visibility="gone"
          fontPath="fonts/Roboto-Light.ttf"
          />

    </RelativeLayout>

  </LinearLayout>

</RelativeLayout>
